--- a/_config.yml
+++ b/_config.yml
@@ -18,31 +18,53 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
+## 网址
 url: http://yoursite.com
+## 网站根目录
 root: /
+## 文章的永久链接格式
 permalink: :year/:month/:day/:title/
+## 永久链接中各部分的默认值
 permalink_defaults:
 
 # Directory
+## 源内容文件夹
 source_dir: source
+## 公共文件夹，存放生成的站点文件
 public_dir: public
+## 标签文件夹
 tag_dir: tags
+## 归档文件夹
 archive_dir: archives
+## 分类文件夹
 category_dir: categories
+## include code文件夹
 code_dir: downloads/code
+## 国际化文件夹
 i18n_dir: :lang
+## 跳过指定文件的渲染
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+## 新文章默认名称
+new_post_name: :year-:month-:day-:title.md
+## 预设布局
 default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+## 把标题转换成title case
+titlecase: false 
+## 在新标签中打开链接
+external_link: true 
+## 把文件名转换成（1）小写或（2）大写
 filename_case: 0
+## 显示草稿
 render_drafts: false
+## 启动Assets文件夹
 post_asset_folder: false
+## 把链接改为与根目录的相对位置
 relative_link: false
+## 显示未来的文章
 future: true
+## 代码块的设置
 highlight:
   enable: true
   line_number: true
@@ -50,29 +72,38 @@ highlight:
   tab_replace:
 
 # Category & Tag
+## 默认分类
 default_category: uncategorized
+## 分类别名
 category_map:
+## 标签别名
 tag_map:
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
+## 日期格式
 date_format: YYYY-MM-DD
+## 时间格式
 time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
+## 每页显示的文章量（0=关闭分页功能）
 per_page: 10
+## 分页目录
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+## 当前主题名称
+theme: yelee
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
+## 部署
 deploy:
   type: git
   repo: https://github.com/hxjmy/hxjmy.github.io.git
